Fix design of twitter card on mobile

--- a/app/assets/stylesheets/medium-editor.scss
+++ b/app/assets/stylesheets/medium-editor.scss
@@ -245,5 +245,9 @@
     blockquote {
       font-size: 14px;
     }
+
+    .twitter-tweet {
+      width: 90vw !important;
+    }
   }
 }
